--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,35 @@
+dependencies
 /node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+node_modules
+.DS_Store
+error_log
+*.log
+.cache
+dist
+build
+.env
+.vscode
+.idea
+dump.rdb
+
+/cypress/videos
